[project]
name = "bili-crawler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fake-useragent>=1.2.0",
    "matplotlib>=3.5.0",
    "pandas>=1.5.0",
    "pytz>=2022.1",
    "requests>=2.28.0",
    "seaborn>=0.11.0",
    "urllib3>=1.26.0",
]
